# TTL-Legacy

./: .env.example  IMPLEMENTATION_COMPLETE.md  README.md  WITHDRAWAL_FEATURES_IMPLEMENTATION.md
backend/: Cargo.toml
backend/src/: db.rs  db_reminder_sql.rs  handlers.rs  lib.rs  main.rs  models.rs  notifications.rs  routes.rs  scheduler.rs  tests.rs  websocket.rs
contracts/ttl_vault/src/: lib.rs  test.rs  types.rs
contracts/zk_verifier/src/: lib.rs  test.rs
docs/: disaster-recovery-runbook.md  ownership-transfer.md  passkeys.md  push-notifications.md  security-audit-checklist.md  ttl-logic.md  vesting-schedules.md
